fix: update api url

--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "config-manager",
-  "private": true,
   "version": "0.0.1",
   "description": "config-manager",
   "type": "module",
-  "workspaces": [
-    "api",
-    "app"
-  ],
   "scripts": {
-    "api:dev": "npm run dev --workspace=api",
-    "api:start": "npm start --workspace=api",
-    "app:dev": "npm run dev --workspace=app",
-    "app:build": "npm run build --workspace=app",
-    "build": "npm run app:build",
-    "start": "npm run api:start"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "geduramc",
-  "license": "ISC",
+  "dependencies": {
+    "@geduramc/copy-clipboard-element": "^1.0.8"
+  },
   "devDependencies": {
+    "vite": "^4.2.0",
     "standard": "^17.0.0"
   },
   "eslintConfig": {
